--- a/templates/auth/landlord-signin.html
+++ b/templates/auth/landlord-signin.html
@@ -1,17 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landlord Signin</title>
-</head>
-<body>
-    <h1>Landlord Signin</h1>
-    <form action="">
-        <input type="text" placeholder="username" name="username">
-        <input type="text" placeholder="password" name="password">
-    </form>
-    <p>If don't have a landlord account: <a href="{% url 'authentication:landlord-register' %}"> Register</a></p>
-    <p>If you are a user instead: <a href="{% url 'authentication:user-signin' %}"> Register</a></p>
-</body>
-</html>
+{% extends 'auth/auth-base.html' %}
+
+
+{% block title %}Landlord Signin{% endblock %}
+
+{% block content %}
+<h1 class="text-3xl font-bold">Landlord Signin</h1>
+<div class="w-full max-w-xs">
+  <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
+        method="post"
+        action="{% url 'authentication:landlord-signin' %}">
+
+      {% csrf_token %}
+    <div class="mb-4">
+      <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+        Email
+      </label>
+      <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" name="email" placeholder="Email">
+    </div>
+    <div class="mb-6">
+      <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+        Password
+      </label>
+      <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="password" id="password" type="password" placeholder="Password">
+    </div>
+    <div class="flex items-center justify-between">
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+        Sign In
+      </button>
+      <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" 
+      href="{% url 'authentication:landlord-register' %}">
+        No account?
+      </a>
+    </div>
+  </form>
+  <p class="text-center text-gray-500 text-xs">
+    Not a landlord? <a class="text-blue-500" href="{% url 'authentication:tenant-signin' %}">Landlord Signin</a>
+  </p>
+</div>
+{% endblock %}
