finished frontend for tenant profiles, navigation for tenants and landlords are almost done

--- a/templates/tenant/_footer.html
+++ b/templates/tenant/_footer.html
@@ -1,3 +1,4 @@
+  {% load static %}
   <!--For Desktops -->
   <section class="footer d-none d-xl-block">
     <div class="container-fluid footer-container">
@@ -5,7 +6,7 @@
         <div class="offset-xl-1 col-xl-3">
           <div class="footer-widget">
             <div class="footer-logo">
-              <img src="images/logo.svg" alt="logo">
+              <img src="{% static 'images/newlogo.png' %}" alt="logo" height="35">
             </div>
             <div class="footer-address">
               <p>
@@ -128,7 +129,7 @@
         <div class="col-sm-6">
           <div class="footer-widget">
             <div class="footer-logo">
-              <img src="images/logo.svg" alt="logo">
+              <img src="{% static 'images/newlogo.png' %}" alt="logo" height="35">
             </div>
             <div class="footer-address">
               <p>
@@ -252,7 +253,7 @@
         <div class="col-12">
           <div class="footer-widget">
             <div class="footer-logo">
-              <img src="images/logo.svg" alt="logo">
+              <img src="{% static 'images/newlogo.png' %}" alt="logo" height="35">
             </div>
           </div>
         </div>
