--- a/templates/index/_header.html
+++ b/templates/index/_header.html
@@ -2,15 +2,16 @@
     <nav class="navbar navbar-expand-lg navbar-white" id="navigationBar">
       <div class="container-fluid navbar-container">
         <div class="d-flex align-items-center">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.svg" alt="logo">
+          <a class="navbar-brand" href="/">
+            {% load static %}
+            <img src="{% static 'images/newlogo.png' %}" alt="logo" height="35">
           </a>
           <a href="tel:2329872 " class="navbar-number align-items-center">
             <svg width="6" height="7" viewBox="0 0 6 7" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="3" cy="3.5" r="3" fill="#417086"/>
             </svg>
             <i class="ph-phone-bold"></i>
-            (546) 232 - 9872          
+            (546) 232 - 9872         
           </a>
         </div>
         <div class=" d-none d-sm-flex navbar-search align-items-center ms-auto ms-lg-0 order-lg-last">
