--- a/templates/index/_login_modal.html
+++ b/templates/index/_login_modal.html
@@ -15,13 +15,16 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="modal-property-details-form">
-              <form class="contact-form-items row">
+              <form class="contact-form-items row"
+                    method="POST"
+                    action="{% url 'authentication:tenant-signin' %}">
+                    {% csrf_token %}
                 <div class="col-12">
                   <div class="input-group">
                     <span class="input-group-text" >
                       <i class="ph-user"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Email address">
+                    <input type="text" class="form-control" placeholder="Email address" name="email">
                   </div>
                 </div>
                 <div class="col-12">
@@ -29,7 +32,7 @@
                     <span class="input-group-text" >
                       <i class="ph-keyhole"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="Password" >
+                    <input type="password" class="form-control" placeholder="Password" name="password">
                   </div>
                 </div>
                 <div class="col-6">
@@ -84,13 +87,16 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="modal-property-details-form">
-              <form class="contact-form-items row">
+              <form class="contact-form-items row"
+                    method="POST"
+                    action="{% url 'authentication:tenant-register' %}">
+                {% csrf_token %}
                 <div class="col-sm-6">
                   <div class="input-group">
                     <span class="input-group-text" >
                       <i class="ph-user"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Full Name">
+                    <input type="text" class="form-control" placeholder="Full Name" name="name">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -98,7 +104,7 @@
                     <span class="input-group-text" >
                       <i class="ph-envelope-simple-open"></i>
                     </span>
-                    <input type="email" class="form-control" placeholder="Email Address" >
+                    <input type="email" class="form-control" placeholder="Email Address" name="email">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -106,7 +112,7 @@
                     <span class="input-group-text" >
                       <i class="ph-phone"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Phone Number">
+                    <input type="text" class="form-control" placeholder="Phone Number" name="phone">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -114,7 +120,7 @@
                     <span class="input-group-text" >
                       <i class="ph-map-pin"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Address">
+                    <input type="text" class="form-control" placeholder="Address" name="address">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -122,7 +128,7 @@
                     <span class="input-group-text" >
                       <i class="ph-money"></i>
                     </span>
-                    <input min="0" max="99999" type="number" class="form-control" placeholder="Monthly Budget (€)">
+                    <input min="0" max="99999" type="number" class="form-control" placeholder="Monthly Budget (€)" name="budget">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -130,7 +136,7 @@
                     <span class="input-group-text" >
                       <i class="ph-users"></i>
                     </span>
-                    <select class="form-control">
+                    <select class="form-control" name="roommate">
                       <option selected disabled>Open to Roommates</option>
                       <option value="yes">Yes</option>
                       <option value="no">No</option>
@@ -142,7 +148,7 @@
                     <span class="input-group-text" >
                       <i class="ph-keyhole"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="Password" >
+                    <input type="password" class="form-control" placeholder="Password" name="password">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -150,7 +156,7 @@
                     <span class="input-group-text" >
                       <i class="ph-keyhole"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="Re-Password" >
+                    <input type="password" class="form-control" placeholder="Re-Password" name="password2">
                   </div>
                 </div>
                 <div class="col-12">
@@ -183,74 +189,76 @@
   </div>
 
 
-    <!-- Modal Landlord Log In -->
-    <div class="modal fade modal-login" id="landlordLogin"  tabindex="-1" aria-labelledby="loginLabel" aria-hidden="true">
-      <div class="modal-dialog  modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4  id="loginLabel">Landlord Log In</h4>
-            <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z" stroke="#1C4456" stroke-width="2.3" stroke-miterlimit="10"></path>
-                  <path d="M15 9L9 15" stroke="#1C4456" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"></path>
-                  <path d="M15 15L9 9" stroke="#1C4456" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"></path>
-                </svg>                     
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-              <div class="modal-property-details-form">
-                <form class="contact-form-items row">
-                  <div class="col-12">
-                    <div class="input-group">
-                      <span class="input-group-text" >
-                        <i class="ph-user"></i>
-                      </span>
-                      <input type="text" class="form-control" placeholder="Email address">
-                    </div>
+  <!-- Modal Landlord Log In -->
+  <div class="modal fade modal-login" id="landlordLogin"  tabindex="-1" aria-labelledby="loginLabel" aria-hidden="true">
+    <div class="modal-dialog  modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4  id="loginLabel">Landlord Log In</h4>
+          <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z" stroke="#1C4456" stroke-width="2.3" stroke-miterlimit="10"></path>
+                <path d="M15 9L9 15" stroke="#1C4456" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M15 15L9 9" stroke="#1C4456" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>                     
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="modal-property-details-form">
+              <form class="contact-form-items row"
+                    method="POST"
+                    action="{% url 'authentication:landlord-signin' %}">
+                {% csrf_token %}
+                <div class="col-12">
+                  <div class="input-group">
+                    <span class="input-group-text" >
+                      <i class="ph-user"></i>
+                    </span>
+                    <input type="text" class="form-control" placeholder="Email address" name="email">
                   </div>
-                  <div class="col-12">
-                    <div class="input-group">
-                      <span class="input-group-text" >
-                        <i class="ph-keyhole"></i>
-                      </span>
-                      <input type="password" class="form-control" placeholder="Password" >
-                    </div>
+                </div>
+                <div class="col-12">
+                  <div class="input-group">
+                    <span class="input-group-text" >
+                      <i class="ph-keyhole"></i>
+                    </span>
+                    <input type="password" class="form-control" placeholder="Password" name="password">
                   </div>
-                  <div class="col-6">
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                      <label class="form-check-label" for="flexCheckDefault">
-                        Remember
-                      </label>
-                    </div>
+                </div>
+                <div class="col-6">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexlandlordCheckDefault">
+                    <label class="form-check-label" for="flexlandlordCheckDefault">
+                      Remember
+                    </label>
                   </div>
-                  <div class="col-6">
-                    <div class="form-check text-end">
-                      <a href="#login" data-bs-toggle="modal" data-bs-dismiss="modal">I'm a Tenant</a>
-                    </div>
+                </div>
+                <div class="col-6">
+                  <div class="form-check text-end">
+                    <a href="#login" data-bs-toggle="modal" data-bs-dismiss="modal">I'm a Tenant</a>
                   </div>
-                  <div class="w-100 contact-form-button">
-                    <button type="submit" class="btn btn-large d-block w-100">Log In</button>
-                  </div>
-                  <div class="w-100 contact-form-button">
-                    <button type="submit" class="btn btn-large btn-outline d-block w-100  mt-3">
-                      <i class="ph-google-logo align-top"></i>
-                      <span>  Log In with Google </span> 
-                    </button>
-                  </div>
-    
-                </form>
-              </div>
+                </div>
+                <div class="w-100 contact-form-button">
+                  <button type="submit" class="btn btn-large d-block w-100">Log In</button>
+                </div>
+                <div class="w-100 contact-form-button">
+                  <button type="submit" class="btn btn-large btn-outline d-block w-100  mt-3">
+                    <i class="ph-google-logo align-top"></i>
+                    <span>  Log In with Google </span> 
+                  </button>
+                </div>
+  
+              </form>
             </div>
           </div>
-          <div class="modal-footer text-center justify-content-center">
-            <p class="bold">Don't have an account? <a href="#createLandlordAccount" data-bs-toggle="modal" data-bs-dismiss="modal">Create Account</a> </p>
-          </div>
+        </div>
+        <div class="modal-footer text-center justify-content-center">
+          <p class="bold">Don't have an account? <a href="#createLandlordAccount" data-bs-toggle="modal" data-bs-dismiss="modal">Create Account</a> </p>
         </div>
       </div>
     </div>
-
+  </div>
 
   <!-- Modal Landlord Create Account -->
   <div class="modal fade modal-createAccount" id="createLandlordAccount"  tabindex="-2" aria-labelledby="createAccountLabel" aria-hidden="true">
@@ -270,13 +278,16 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="modal-property-details-form">
-              <form class="contact-form-items row">
+              <form class="contact-form-items row"
+                    method="POST"
+                    action="{% url 'authentication:landlord-register' %}">
+                {% csrf_token %}
                 <div class="col-sm-6">
                   <div class="input-group">
                     <span class="input-group-text" >
                       <i class="ph-user"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Full Name">
+                    <input type="text" class="form-control" placeholder="Full Name" name="name">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -284,7 +295,7 @@
                     <span class="input-group-text" >
                       <i class="ph-envelope-simple-open"></i>
                     </span>
-                    <input type="email" class="form-control" placeholder="Email Address" >
+                    <input type="email" class="form-control" placeholder="Email Address" name="email">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -292,7 +303,7 @@
                     <span class="input-group-text" >
                       <i class="ph-phone"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Phone Number">
+                    <input type="text" class="form-control" placeholder="Phone Number" name="phone">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -300,7 +311,7 @@
                     <span class="input-group-text" >
                       <i class="ph-hash"></i>
                     </span>
-                    <input type="number" class="form-control" placeholder="No. of Houses" min="0" max="100">
+                    <input type="number" class="form-control" placeholder="No. of Houses" min="0" max="100" name="houses">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -308,7 +319,7 @@
                     <span class="input-group-text" >
                       <i class="ph-keyhole"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="Password" >
+                    <input type="password" class="form-control" placeholder="Password" name="password">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -316,13 +327,13 @@
                     <span class="input-group-text" >
                       <i class="ph-keyhole"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="Re-Password" >
+                    <input type="password" class="form-control" placeholder="Re-Password" name="password2">
                   </div>
                 </div>
                 <div class="col-12">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                    <label class="form-check-label" for="flexCheckDefault2">
+                    <input class="form-check-input" type="checkbox" value="" id="flexlandlordCheckDefault2">
+                    <label class="form-check-label" for="flexlandlordCheckDefault2">
                       <span>I agree to All </span><a href="">Terms & Conditions</a> 
                     </label>
                   </div>
