--- a/templates/tenant/profile.html
+++ b/templates/tenant/profile.html
@@ -52,6 +52,7 @@
     <form class="contact-form-items"
           method="POST"
           action="{% url 'tenant:profile' %}">
+        {% csrf_token %}
       <h4>Housing Preferences</h4>
       <div class="input-group">
         <span class="input-group-text" >
