--- a/templates/tenant/_header.html
+++ b/templates/tenant/_header.html
@@ -18,7 +18,7 @@
           <ul class="list-unstyled m-0">
           </ul>
           {% if user.is_authenticated %}
-            <button disabled style="cursor: default;" class="btn btn-small btn-outline" role="button">
+            <button disabled style="cursor: default; border: none !important;" class="btn btn-small btn-outline" role="button">
               <i class="ph-user-bold"></i>
               {{ user.username }}
             </button>
