--- a/templates/landlord/houses.html
+++ b/templates/landlord/houses.html
@@ -138,7 +138,7 @@
               </li>
             </ul>
             <div class="properties-card--footer d-flex align-items-center justify-content-between">
-              <a href="{% url 'landlord:edit_house' 1 %}" class="btn btn-small">View Details</a>
+              <a href="{% url 'landlord:edit_house' 1 %}" class="btn btn-small">Edit House</a>
               <h5>$649,900</h5>
             </div>
           </div> 
@@ -185,7 +185,7 @@
               </li>
             </ul>
             <div class="properties-card--footer d-flex align-items-center justify-content-between">
-              <a href="property-details.html" class="btn btn-small">View Details</a>
+              <a href="{% url 'landlord:edit_house' 1 %}" class="btn btn-small">Edit House</a>
               <h5>$649,900</h5>
             </div>
           </div> 
