--- a/templates/tenant/matches.html
+++ b/templates/tenant/matches.html
@@ -72,7 +72,7 @@
             <p>He likes playing chess and going to the beach. 
               He is interested in machine learning and history. 
               He prefers to sleep early and stay quite.</p>
-            <form action="GET" class="flex align-items-center">
+            <form action="GET" class="flex align-items-center content-center">
               <button class="btn d-block d-md-inline-block w-md-auto w-100"
               style="background-color: #ff4112;">
                 Reject
@@ -102,7 +102,7 @@
     <div class="for-you container mt-5">
       <h4 style="color: white;" class="mb-0">For You..</h4>
       <div class="row row-cols-xl-3 row-cols-md-2 w-80 g-4 align-items-center content-center">
-        <div class="properties-card industrial commercial resident">
+        <div class="properties-card">
           <div class="properties-card--thumb">
             <img src="" alt="">
           </div>
@@ -149,7 +149,7 @@
           </div> 
         </div>
   
-        <div class="properties-card industrial commercial resident">
+        <div class="properties-card">
           <div class="properties-card--thumb">
             <img src="" alt="">
           </div>
@@ -196,7 +196,7 @@
           </div> 
         </div>
   
-        <div class="properties-card industrial commercial resident">
+        <div class="properties-card d-md-none d-xl-block">
           <div class="properties-card--thumb">
             <img src="" alt="">
           </div>
